--- a/css/tienda.css
+++ b/css/tienda.css
@@ -35,6 +35,10 @@
         .imagenesHome{
             height: 70%;
             width:100%;
+            transition: transform .6s;
+        }
+        .imagenesHome:hover{
+            transform: scale(1.2);
         }
     }
 /*--------------------------------------------------------------------------------------------------------------- */
@@ -129,7 +133,14 @@ body{
         border-radius: 20px;
         border: 2px solid #7b2cbf;
         box-shadow: 0 1px 10px #5a189a;
+        transition: border .2s;
     }
+
+    .nav__li-a:hover{
+        border: 3px solid #7b2cbf;
+        box-shadow: 0 1px 25px #5a189a;
+    
+}
 }
 /*------------------------------------------------------------------------------------------------------------------*/
 /*main home*/
@@ -321,6 +332,11 @@ body{
     border-radius: 15px;
     border: 2px solid  rgb(187, 6, 253);
     box-shadow:0 5px 8px rgb(187, 6, 253);
+    transition: transform .9s;
+ 
+}
+.marvel-foto:hover{
+    transform: scale(1.2);
 }
 /*-------------------------------------------------------------------------------------------------------------------*/
 
@@ -349,6 +365,11 @@ body{
     border-radius: 15px;
     border: 2px solid rgb(187, 6, 253);
     box-shadow: 0 5px 10px rgb(187, 6, 253);
+    transition: transform .9s;
+}
+
+.kimet-foto:hover{
+    transform: scale(1.2);
 }
 /*----------------------------------------------------------------------------------------------------------------------*/
 .products__foto{
