--- a/scss/tienda.scss
+++ b/scss/tienda.scss
@@ -108,6 +108,90 @@ body{
     }   
 }
 
+.articulos__novedades{
+    text-shadow: 2px 2px 3px #000;
+    text-align: center;
+    font-size:3rem;
+}
+.articulos__ofertas{
+    text-shadow: 2px 3px 3px #000;
+    font-size: 3rem;
+    text-align: center;
+
+}
+
+#carouselExampleIndicators{
+    width: 100%;
+    margin: 20px auto
+    
+}
+
+@media (min-width:768px){
+    #carouselExampleIndicators{
+        width: 80%;
+        margin: 20px auto
+        
+    }
+}
+
+@media (min-width:1024px){
+    #carouselExampleIndicators{
+        width: 60%;
+        margin: 20px auto
+    }
+}
+
+#carouselExampleControls{
+    width: 100%;
+    margin: 20px auto
+}
+@media (min-width:768px){
+    #carouselExampleControls{
+        width: 80%;
+        margin: 20px auto
+    }
+}
+
+@media (min-width:1024px){
+    #carouselExampleControls{
+        width: 60%;
+        margin: 20px auto
+    }
+}
+
+.caro{
+    margin: 15px;
+    padding: 30px;
+    border-radius: 40px;
+      @media(min-width:768px){
+            margin: 15px;
+            padding: 30px;
+            border-radius: 40px;
+       }
+       @media(min-width:1024px){
+            margin: 40px;
+            padding: 30px;
+            border-radius: 40px;
+       }
+    }
+
+    
+   
+.ofoto{
+    width: 100%;
+    height: 20vh;
+    @media (min-width:768px){
+            width: 100%;
+            height: 30vh;
+    }
+    @media (min-width:1024px){
+            width: 100%;
+            height: 40vh;
+    }
+}
+
+
+
 
 .funko-banner{
     margin: 15px;
